WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162489
[GTK] BadDamage X error in /webkit2/WebKitWebView/preferred-size
https://bugs.webkit.org/show_bug.cgi?id=162489
Summary
[GTK] BadDamage X error in /webkit2/WebKitWebView/preferred-size
Carlos Garcia Campos
Reported
2016-09-23 06:08:38 PDT
(bin/TestWebKitAPI/WebKit2Gtk/TestWebKitWebView:8449): Gdk-ERROR **: The program 'bin/TestWebKitAPI/WebKit2Gtk/TestWebKitWebView' received an X Window System error. This probably reflects a bug in the program. The error was 'BadDamage (invalid Damage parameter)'. (Details: serial 514 error_code 151 request_code 143 (DAMAGE) minor_code 2) (Note to programmers: normally, X errors are reported asynchronously; that is, you will receive the error a while after causing it. To debug your program, run it with the GDK_SYNCHRONIZE environment variable to change this behavior. You can then get a meaningful backtrace from your debugger if you break on the gdk_x_error() function.) FAIL GTester: last random seed: R02Sc6e7d38f5cfb45f491ba566f93d81152 (pid=9065) FAIL: bin/TestWebKitAPI/WebKit2Gtk/TestWebKitWebView I think I've seen this with layout tests too.
Attachments
Patch
(2.82 KB, patch)
2016-09-23 06:11 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-09-23 06:11:26 PDT
Created
attachment 289678
[details]
Patch
Michael Catanzaro
Comment 2
2016-09-23 07:15:41 PDT
Comment on
attachment 289678
[details]
Patch Oh good. I was seeing this sometimes when closing Epiphany, but I could never reproduce when I tried to get a backtrace.
Carlos Garcia Campos
Comment 3
2016-09-23 08:52:21 PDT
Committed
r206305
: <
http://trac.webkit.org/changeset/206305
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug