[GTK] BadDamage X error in /webkit2/WebKitWebView/preferred-size https://bugs.webkit.org/show_bug.cgi?id=162489

Reviewed by Michael Catanzaro.

Do a XSync right after creating/destroying the XDamage used by the redirected window in X11.

* UIProcess/gtk/AcceleratedBackingStoreX11.cpp:
(WebKit::AcceleratedBackingStoreX11::~AcceleratedBackingStoreX11):
(WebKit::AcceleratedBackingStoreX11::update):

Canonical link: https://commits.webkit.org/180439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206305 268f45cc-cd09-0410-ab3c-d52691b4dbfc