Source/WebKit2/UIProcess/gtk/AcceleratedBackingStoreX11.cpp
@@ -118,6 +118,7 @@ AcceleratedBackingStoreX11::~AcceleratedBackingStoreX11()
     if (m_damage) {
         XDamageNotifier::singleton().remove(m_damage.get());
         m_damage.reset();
+        XSync(downcast<PlatformDisplayX11>(PlatformDisplay::sharedDisplay()).native(), False);
     }
 }
 
@@ -127,10 +128,13 @@ void AcceleratedBackingStoreX11::update(const LayerTreeContext& layerTreeContext
     if (m_surface && cairo_xlib_surface_get_drawable(m_surface.get()) == pixmap)
         return;
 
+    Display* display = downcast<PlatformDisplayX11>(PlatformDisplay::sharedDisplay()).native();
+
     if (m_surface) {
         if (m_damage) {
             XDamageNotifier::singleton().remove(m_damage.get());
             m_damage.reset();
+            XSync(display, False);
         }
         m_surface = nullptr;
     }
@@ -146,7 +150,6 @@ void AcceleratedBackingStoreX11::update(const LayerTreeContext& layerTreeContext
     float deviceScaleFactor = m_webPage.deviceScaleFactor();
     size.scale(deviceScaleFactor);
 
-    Display* display = downcast<PlatformDisplayX11>(PlatformDisplay::sharedDisplay()).native();
     ASSERT(downcast<PlatformDisplayX11>(PlatformDisplay::sharedDisplay()).native() == GDK_DISPLAY_XDISPLAY(gdk_display_get_default()));
     GdkVisual* visual = gdk_screen_get_rgba_visual(gdk_screen_get_default());
     if (!visual)
@@ -158,6 +161,7 @@ void AcceleratedBackingStoreX11::update(const LayerTreeContext& layerTreeContext
         if (m_webPage.isViewVisible())
             gtk_widget_queue_draw(m_webPage.viewWidget());
     });
+    XSync(display, False);
 }
 
 bool AcceleratedBackingStoreX11::paint(cairo_t* cr, const IntRect& clipRect)
